examples/helloworld/envoy.yaml
static_resources:
  listeners:
    - name: listener_15000
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 15000
      filter_chains:
        - name: http
          filters:
            - name: http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: test
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: some_service
                http_filters:
                  ######################################################################################################
                  - name: envoy.http.dynamic_modules
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleConfig
                      name: test
                      file_path: main
                      module_config: "this is configuration passed from envoy.yaml"
                  ######################################################################################################
                  - name: router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: some_service
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin.org
                      port_value: 80
